image size fixed across all cards

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
+      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>HachStacks</span></a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -183,7 +183,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-1.jpg" class="img-fluid team-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/unomieta_"><i class="bx bxl-twitter"></i></a>
                   <a href="https://facebook.com/joe.unomieta"><i class="bx bxl-facebook"></i></a>
@@ -202,7 +202,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid team-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/chris_priority"><i class="bx bxl-twitter"></i></a>
                   <a href="https://facebook.com/chris.eminence.3"><i class="bx bxl-facebook"></i></a>
@@ -220,7 +220,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-3.jpg" class="img-fluid team-fluid" alt="">
                 <div class="social">
                   <a href="https://facebook.com/Respect.Truth"><i class="bx bxl-facebook"></i></a>
                   <a href="https://behance.net/ukponondaudo"><i class="bx bxl-behance"></i></a>
@@ -236,7 +236,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-4.jpg" class="img-fluid team-fluid" alt="">
                 <div class="social">
                   <a href="https://twitter.com/sirkiosta"><i class="bx bxl-twitter"></i></a>
                   <a href="https://facebook.com/sirkiosta"><i class="bx bxl-facebook"></i></a>
@@ -254,7 +254,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-6.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-6.jpg" class="img-fluid team-fluid" alt="">
                 <div class="social">
                   <a href="https://facebook.com/uduak.genesis"><i class="bx bxl-facebook"></i></a>
                   <a href="https://linkedin.com/in/uduak-usoro-5501591a3"><i class="bx bxl-linkedin"></i></a>
@@ -270,7 +270,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img client-logo teamedit">
-                <img src="assets/img/team/team-7.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-7.jpg" class="img-fluid team-fluid" alt="">
                 <div class="social">
                   <a href="https://facebook.com/profile.php?id=100022086265883"><i class="bx bxl-facebook"></i></a>
                   <a href="https://github.com/Ekong05"><i class="bx bxl-github"></i></a>
