--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
+      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>HachStacks</span></a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -136,7 +136,7 @@
                 <div class="col-lg-4 info">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>Akwa Ibom State University</p>
+                  <p>Akwa Ibom State, Nigeria</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
