--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
+      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>HachStacks</span></a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
