--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>Hach</span>Stacks</a></h1>
+      <h1 class="logo logo-mobile me-auto"><a href="/"><img src="assets/img/big-logo.png" alt="" class="img-fluid"><span>HachStacks</span></a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -143,7 +143,7 @@
         <div class="row portfolio-container" data-aos="fade-up">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-managers">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-1.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Joseph Unomieta</h4>
               <p>Software Engineer | Project Manager</p>
@@ -157,8 +157,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
+            <img src="assets/img/portfolio/portfolio-6.jpg" class="portfolio-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Uduak Genesis</h4>
+              <p>Digital Marketer</p>
+              <div class="social">
+                <a href="https://facebook.com/uduak.genesis"><i class="bx bxl-facebook"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
-            <img src="assets/img/portfolio/portfolio-19.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-19.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Christopher Emediong</h4>
               <p>Mobile Developer</p>
@@ -169,23 +181,23 @@
               </div>
               <a href="assets/img/portfolio/portfolio-19.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
-          </div>
+          </div>  
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-18.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Respect Ndaudo</h4>
+              <h4>Utibeabasi Umoren</h4>
               <p>Product Designer</p>
               <div class="social">
-                <a href="https://facebook.com/Respect.Truth"><i class="bx bxl-facebook"></i></a>
-                <a href="https://behance.net/ukponondaudo"><i class="bx bxl-behance"></i></a>
+                <a href="https://twitter.com/Yhuteemoren"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/utibeabasi-umoren"><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+              <a href="assets/img/portfolio/portfolio-18.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-mobile">
-            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-9.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Chris Ekong</h4>
               <p>Mobile Developer</p>
@@ -198,8 +210,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
+            <img src="assets/img/portfolio/portfolio-16.jpg" class="portfolio-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Joy Udotong</h4>
+              <p>Digital Marketer</p>
+              <div class="social">
+                <a href="https://www.linkedin.com/in/joy-udotong"><i class="bx bxl-linkedin"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-16.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-10.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>King Obong</h4>
               <p>Full Stack Web Developer</p>
@@ -213,20 +237,47 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-2.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Uduak Genesis</h4>
-              <p>Digital Marketer</p>
+              <h4>Emem Ekong</h4>
+              <p>PHP/Laravel Developer</p>
               <div class="social">
-                <a href="https://facebook.com/uduak.genesis"><i class="bx bxl-facebook"></i></a>
+                <a href="https://twitter.com/airmyekong"><i class="bx bxl-twitter"></i></a>
+                <a href="https://github.com/Ememekong001"><i class="bx bxl-github"></i></a>
+                <a href="https://linkedin.com/in/emem-ekong-254985240"><i class="bx bxl-linkedin"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-8.jpg" class="portfolio-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Respect Ndaudo</h4>
+              <p>Product Designer</p>
+              <div class="social">
+                <a href="https://facebook.com/Respect.Truth"><i class="bx bxl-facebook"></i></a>
+                <a href="https://behance.net/ukponondaudo"><i class="bx bxl-behance"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-3.jpg" class="portfolio-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Tope Agbaje</h4>
+              <p>NodeJS Developer</p>
+              <div class="social">
+                <a href="https://twitter.com/ag_tope"><i class="bx bxl-twitter"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <img src="assets/img/portfolio/portfolio-14.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Emmanuel Jackson</h4>
               <p>Graphic Designer</p>
@@ -236,33 +287,45 @@
               <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
-  
+ 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
+            <img src="assets/img/portfolio/portfolio-13.jpg" class="portfolio-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Emem Ukpong</h4>
+              <p>Digital Marketer | SEO Content Developer</p>
+              <div class="social">
+                <a href="https://twitter.com/emmukpong"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/-ememukpong"><i class="bx bxl-linkedin"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-15.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-15.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Frank Udoh</h4>
               <p>Web Developer</p>
-              <div class="social">
-                
+              <div class="social"> 
               </div>
               <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
-          </div>
+          </div> 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
-            <img src="assets/img/portfolio/portfolio-16.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="assets/img/portfolio/portfolio-20.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Joy Udotong</h4>
-              <p>Digital Marketer</p>
+              <h4>Blessing Udoh</h4>
+              <p>Web Developer</p>
               <div class="social">
-                <a href="https://www.linkedin.com/in/joy-udotong"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://facebook.com/profile.php?id=100073742652803"><i class="bx bxl-facebook"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-16.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+              <a href="assets/img/portfolio/portfolio-20.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-17.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-17.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Mgbemele IkeChukwu</h4>
               <p>Reactjs Developer</p>
@@ -277,46 +340,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-18.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Utibeabasi Umoren</h4>
-              <p>Product Designer</p>
-              <div class="social">
-                <a href="https://twitter.com/Yhuteemoren"><i class="bx bxl-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/utibeabasi-umoren"><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-18.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Emem Ekong</h4>
-              <p>PHP/Laravel Developer</p>
-              <div class="social">
-                <a href="https://twitter.com/airmyekong"><i class="bx bxl-twitter"></i></a>
-                <a href="https://github.com/Ememekong001"><i class="bx bxl-github"></i></a>
-                <a href="https://linkedin.com/in/emem-ekong-254985240"><i class="bx bxl-linkedin"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Tope Agbaje</h4>
-              <p>NodeJS Developer</p>
-              <div class="social">
-                <a href="https://twitter.com/ag_tope"><i class="bx bxl-twitter"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-4.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Abasiediomo Peter</h4>
               <p>Graphic Designer</p>
@@ -328,7 +352,7 @@
           </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-7.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Daramfon Ukpong</h4>
               <p>Software Engineer</p>
@@ -342,7 +366,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web filter-managers">
-            <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-11.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Bassey Anse</h4>
               <p>Project Manager</p>
@@ -354,40 +378,41 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item hachstacks-mobile">
+            <img src="assets/img/portfolio/portfolio-hachstack.jpg" class="portfolio-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>HachStacks Tech Community</h4>
+              <p>View our activities</p>
+              <div class="social">
+                <a href="https://facebook.com/hachstacks"><i class="bx bxl-facebook"></i></a>
+                <a href="https://twitter.com/hachstacks"><i class="bx bxl-twitter"></i></a>
+              </div>
+              <a href="assets/img/portfolio/portfolio-hachstack.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
-            <img src="assets/img/portfolio/portfolio-12.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/portfolio-12.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
               <h4>Okon Sunday</h4>
               <p>Product Designer</p>
               <div class="social">
-                <a href="https://web.facebook.com/isunnyboy"><i class="bx bxl-facebook"></i></a>
+                <a href="https://facebook.com/isunnyboy"><i class="bx bxl-facebook"></i></a>
               </div>
               <a href="assets/img/portfolio/portfolio-12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-digimart">
-            <img src="assets/img/portfolio/portfolio-13.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item">
+            <img src="assets/img/portfolio/portfolio-hachstack.jpg" class="portfolio-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Emem Ukpong</h4>
-              <p>Digital Marketer | SEO Content Developer</p>
+              <h4>HachStacks Tech Community</h4>
+              <p>View our activities</p>
               <div class="social">
-                <a href="https://twitter.com/emmukpong"><i class="bx bxl-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/-ememukpong"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://facebook.com/hachstacks"><i class="bx bxl-facebook"></i></a>
+                <a href="https://twitter.com/hachstacks"><i class="bx bxl-twitter"></i></a>
               </div>
-              <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-20.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Blessing Udoh</h4>
-              <p>Web Developer</p>
-              <div class="social">
-                <a href="https://facebook.com/profile.php?id=100073742652803"><i class="bx bxl-facebook"></i></a>
-              </div>
-              <a href="assets/img/portfolio/portfolio-20.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
+              <a href="assets/img/portfolio/portfolio-hachstack.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="">  </i></a>
             </div>
           </div>
 
