support page payment link added

--- a/support.html
+++ b/support.html
@@ -135,9 +135,9 @@
               <div class="row">
                 <div class="col-lg-4 info">
                   <i class="bi bi-bank"></i>
-                  <h4>Account Details:</h4>
-                  <p>Account Number: <b>2024911401</b><br>
-                  Bank Name: <b>KUDA MFB<br>Please <a href="tel:+2348156841952">call</a> to confirm</b></p>
+                  <h4>Payable to:</h4>
+                  <p class="support-card"><a href="https://bit.ly/hachstacks-support" class="payment-url">Click to pay</a><br> Or transfer to <br> Account Number: <b>2024911401</b><br>
+                  Bank Name: <b>KUDA MFB</b></p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
@@ -151,6 +151,18 @@
                   <i class="bi bi-phone"></i>
                   <h4>Whatsapp & Calls:</h4>
                   <p><a href="https://wa.me/+2348156841952">+234 815 684 1952</a></p>
+                </div>
+
+                <div class="col-lg-4 info">
+                  
+                </div>
+
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  <p>Please <a href="tel:+2348156841952" style="color: RED; font-weight: 800">CALL</a> to confirm</a></p>
+                </div>
+
+                <div class="col-lg-4 info mt-4 mt-lg-0">
+                  
                 </div>
               </div>
             </div>
