about page padding fixed

--- a/about.html
+++ b/about.html
@@ -138,12 +138,9 @@
               providing resources necessary for their growth, encourage and mentor
               through regular meetups and events, access to carefully selected patrons and
               resource persons. <br> <br>
-              <strong>“When you see someone as involved in the process as you are, it results in an
-              intense drive and motivation”</strong> ~ <span style="color: #411472;"><b>HachStacks</b></span>
-              </p>
               <div class="text-right"></div>
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
+          <div class="col-lg-6 pt-4 pt-lg-0 about-padding" data-aos="fade-left">
             <p>
               <br>
               HachStacks aims at identifying these tech minds, 
@@ -154,7 +151,9 @@
               <li><i class="ri-check-double-line"></i> <b>GROW</b> into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              <a href="https://bit.ly/hachstacks" class="btn-get-started" > <b>Register to join this amazing community today! </b> </a>
+              <strong>“When you see someone as involved in the process as you are, it results in an
+                intense drive and motivation”</strong> ~ <span style="color: #411472;"><b>HachStacks</b></span> <br> <br>
+              <a href="https://wa.me/+2348156841952" class="btn-get-started" >Click to join this amazing community today!</a>
             </p>
           </div>
         </div>
