--- a/index.html
+++ b/index.html
@@ -121,12 +121,10 @@
               providing resources necessary for their growth, encourage and mentor
               through regular meetups and events, access to carefully selected patrons and
               resource persons. <br> <br>
-              <strong>“When you see someone as involved in the process as you are, it results in an
-              intense drive and motivation”</strong> ~ <span style="color: #411472;"><b>HachStacks</b></span>
               </p>
               <div class="text-right"></div>
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
+          <div class="col-lg-6 pt-4 pt-lg-0 about-padding" data-aos="fade-left">
             <p>
               <br>
               HachStacks aims at identifying these tech minds, 
@@ -137,7 +135,9 @@
               <li><i class="ri-check-double-line"></i> <b>GROW</b> into tech giants.</li>
             </ul>
             <p class="fst-italic">
-              <b>Join this amazing community today! </b>Send a DM to <a href="https://wa.me/+2348156841952" class="btn-get-started" >join our whatsapp group here</a>
+              <strong>“When you see someone as involved in the process as you are, it results in an
+                intense drive and motivation”</strong> ~ <span style="color: #411472;"><b>HachStacks</b></span> <br> <br>
+              <a href="https://wa.me/+2348156841952" class="btn-get-started" >Click to join this amazing community today!</a>
             </p>
           </div>
         </div>
